# ChromaTag

./: CMakeLists.txt  LICENSE  README.md  Run_JMD_ChromaTag_Detector.cpp
Configs/: chromatags_config.yml
Detector/: CMakeLists.txt  CMakeLists.txt~  JMD_ChromaTag.cpp  JMD_ChromaTag.hpp  JMD_ChromaTag_Common.cpp  JMD_ChromaTag_Common.hpp  JMD_ChromaTag_Decode.cpp  JMD_ChromaTag_Decode.hpp  JMD_ChromaTag_Detect.cpp  JMD_ChromaTag_Detect.hpp  JMD_ChromaTag_Pose.cpp  JMD_ChromaTag_Pose.hpp
Scripts/: Run_ChromaTag.sh
Tests/: CMakeLists.txt  Run_JMD_TestColorConversion.cpp  Run_JMD_TestColorSpace.cpp
Utilities/: CMakeLists.txt  JMD_Utils_Defines.hpp
Utilities/Common/: CMakeLists.txt  JMD_Utils_Object.cpp  JMD_Utils_Object.hpp  JMD_Utils_Options.cpp  JMD_Utils_Options.hpp  JMD_Utils_Timer.cpp  JMD_Utils_Timer.hpp  JMD_Utils_Writer.cpp  JMD_Utils_Writer.hpp
Utilities/LCM_Types/: CMakeLists.txt  LCM_ChromaTag_Detection_Type.lcm  LCM_Image_Type.lcm
Utilities/LCM_Types/JMD/: JMD_LCM_Image_Type.c  JMD_LCM_Image_Type.h  LCM_ChromaTag_Detection_Type.hpp  LCM_Image_Type.hpp
Utilities/Math/: CMakeLists.txt  JMD_Math_Common.cpp  JMD_Math_Common.hpp
Utilities/Vision/: CMakeLists.txt  JMD_Vision_Image.cpp  JMD_Vision_Image.hpp  JMD_Vision_Line.cpp  JMD_Vision_Line.hpp  JMD_Vision_Point.cpp  JMD_Vision_Point.hpp  JMD_Vision_Process.cpp  JMD_Vision_Process.hpp
