#-----------------------------------------------------#
# Writer Level CMakeLists.txt
# branching into Writer folder
#
# Written by Joseph DeGol
#-----------------------------------------------------#





#-----------------------------------------------------#
#-----------------------------------------------------#
#--------------------- Functions ---------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#

#-----------------------------------------------------#
#-----------------------------------------------------#
#------------------- End Functions -------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#





#-----------------------------------------------------#
#-----------------------------------------------------#
#----------------------- Build -----------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#

#Entering Prompt
prompt_lib("Entering Common Level CMakeLists.txt.")


#Writer
update_lib("Adding Library: Writer")
add_library(Writer JMD_Utils_Writer.cpp)

#Object
update_lib("Adding Library: Object")
add_library(Object JMD_Utils_Object.cpp)

#Timer
update_lib("Adding Library: Timer")
add_library(Timer JMD_Utils_Timer.cpp)

#Options
update_lib("Adding Library: Options")
add_library(Options JMD_Utils_Options.cpp)
target_link_libraries(Options Writer Object)

#Leaving Prompt
prompt_lib("Leaving Common Level CMakeLists.txt.")

#-----------------------------------------------------#
#-----------------------------------------------------#
#--------------------- End Build ---------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#
