#-----------------------------------------------------#
# LCM_Types Level CMakeLists.txt
# branching into LCM_Types folder
#
# Written by Joseph DeGol
#-----------------------------------------------------#





#-----------------------------------------------------#
#-----------------------------------------------------#
#--------------------- Functions ---------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#

#-----------------------------------------------------#
#-----------------------------------------------------#
#------------------- End Functions -------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#





#-----------------------------------------------------#
#-----------------------------------------------------#
#----------------------- Build -----------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#

#Entering Prompt
prompt_lib("Entering LCM_Types Level CMakeLists.txt.")


#JMD_LCM_Image_Type
update_lib("Adding Library: JMD_LCM_Image_Type")
add_library(JMD_LCM_Image_Type JMD/JMD_LCM_Image_Type.c)


#Leaving Prompt
prompt_lib("Leaving LCM_Types Level CMakeLists.txt.")

#-----------------------------------------------------#
#-----------------------------------------------------#
#--------------------- End Build ---------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#
