#-----------------------------------------------------#
# Math Level CMakeLists.txt
# branching into Math folder
#
# Written by Joseph DeGol
#-----------------------------------------------------#





#-----------------------------------------------------#
#-----------------------------------------------------#
#--------------------- Functions ---------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#

#-----------------------------------------------------#
#-----------------------------------------------------#
#------------------- End Functions -------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#





#-----------------------------------------------------#
#-----------------------------------------------------#
#----------------------- Build -----------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#

#Entering Prompt
prompt_lib("Entering Math Level CMakeLists.txt.")

#add Math Common
update_lib("Adding Library: Math")
add_library(Math JMD_Math_Common.cpp)
target_link_libraries(Math Writer)

#Leaving Prompt
prompt_lib("Leaving Math Level CMakeLists.txt.")

#-----------------------------------------------------#
#-----------------------------------------------------#
#--------------------- End Build ---------------------#
#-----------------------------------------------------#
#-----------------------------------------------------#
